<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:text="@string/app_name"
        android:id="@+id/app_name_text"
        style="@style/loginHeader"/>

    <!-- Name Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_name_til"
        android:layout_below="@id/app_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_name_tiet"
            style="@style/loginEditText"
            android:hint="@string/name"/>

    </android.support.design.widget.TextInputLayout>

    <!-- username Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_username_til"
        android:layout_below="@id/signup_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_username_tiet"
            style="@style/loginEditText"
            android:hint="@string/username"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_password_til"
        android:layout_below="@id/signup_username_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signup_password_tiet"
            style="@style/loginEditText"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Sign Up button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/loginButton"
        android:text="@string/sign_up"
        android:onClick="signup"
        android:layout_below="@+id/signup_password_til"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backToLogin"
        android:id="@+id/signup_backToLogin_txt"
        android:layout_below="@+id/signup_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />

</RelativeLayout>