<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="1"
    tools:context=".activity.DetailPageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/from_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/from_tiet_data"
                    style="@style/pageDatailData"
                    android:hint="@string/departure" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/to_til_label"
                android:layout_below="@+id/from_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/to_tiet_data"
                    style="@style/pageDatailData"
                    android:hint="@string/destination"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cost_til_label"
                android:layout_below="@+id/to_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cost_tiet_data"
                    style="@style/pageDatailData"
                    android:inputType="numberDecimal"
                    android:hint="@string/cost"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/departure_time_til_label"
                android:layout_below="@+id/cost_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/departure_time_tiet_data"
                    style="@style/pageDatailData"
                    android:hint="@string/departure_time"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_til_label"
                android:layout_below="@+id/departure_time_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/contact_tiet_data"
                    style="@style/pageDatailData"
                    android:hint="@string/contact"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/streets_til_label"
                android:layout_below="@+id/contact_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/streets_tiet_data"
                    style="@style/pageDatailData"
                    android:gravity="top"
                    android:hint="@string/avenues_streets_comments"
                    android:lines="5"
                    android:singleLine="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/seat_til_label"
                android:layout_below="@+id/streets_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/seat_tiet_data"
                    style="@style/pageDatailData"
                    android:hint="@string/seat"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/available_til_label"
                android:layout_below="@+id/seat_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/available_tiet_data"
                    style="@style/pageDatailData"
                    android:hint="@string/available"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passegers_til_label"
                android:layout_below="@+id/available_til_label"
                app:errorEnabled="true"
                style="@style/pageDatailLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passengers_tiet_data"
                    style="@style/pageDatailData"
                    android:gravity="top"
                    android:hint="@string/passengers"
                    android:lines="4"
                    android:singleLine="false"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/join_btn"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passegers_til_label"
                android:text="@string/join"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
